tests/sksl/errors/golden/DuplicateSymbol.glsl
### Compilation failed:

error: 2: symbol 'x' was already defined
error: 5: symbol 'main' was already defined
2 errors
